--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     box-sizing: border-box;
     height: 100vh;
     width: 100vw;
-    background-image: url(back2.jpg);
+    background-image: url(lib/img/back2.jpg);
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
 }
